# ai-record-keeping

./: README.md
claude-daily-work-summaries/: README.md  codex-plan.md  com.{USER}.claude-daily-summary.plist  install.sh  pyproject.toml  uninstall.sh
claude-daily-work-summaries/src/claude_daily_summary/: __init__.py  __main__.py  cli.py  config.py  digest.py  summarizer.py
claude-daily-work-summaries/tests/: test_cli.py  test_config.py  test_digest.py  test_summarizer.py
codex-daily-work-summaries/: .gitignore  README.md  com.{USER}.codex-daily-summary.plist  install.sh  pyproject.toml  uninstall.sh
codex-daily-work-summaries/src/codex_daily_summary/: __init__.py  activity_time.py  cli.py  config.py  digest.py  summarizer.py
codex-daily-work-summaries/tests/: test_cli.py  test_digest.py  test_summarizer.py
