[project]
name = "codex-daily-summary"
version = "0.1.0"
description = "Generate daily Codex activity summaries from local rollout files."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-daily-summary = "codex_daily_summary.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
